[package]

name = "get_errno"
version = "0.0.1"
authors = ["Jakub Stasiak <jakub@stasiak.at>"]
license = "MIT"
description = "Extract errno from std::io::Error"
readme = "README.md"
repository = "https://github.com/iron/iron"
documentation = "http://ironframework.io/doc/iron/"


[dependencies]
regex = "*"
regex_macros = "*"
